--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2"
   }
