Add All India coverage

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "groundwater-app",
-    "slug": "groundwater-app",
+    "name": "JalMitra",
+    "slug": "jalmitra-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "groundwaterapp",
+    "scheme": "jalmitra",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
