--- a/backend/package.json
+++ b/backend/package.json
@@ -1,20 +1,28 @@
 {
-  "name": "sih-ground-water-project",
+  "name": "jalmitra-backend",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Prakhar Mahant",
+  "author": "JalMitra Team",
   "license": "ISC",
-  "description": "",
+  "description": "JalMitra - Your Groundwater Companion API",
   "dependencies": {
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.3",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "express-session": "^1.18.2",
+    "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.3.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^9.0.1",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2"
   }
