--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,39 +1,122 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
+# ============================================
+# JalMitra Frontend - React Native + Expo
+# ============================================
 
-# dependencies
+# ============================================
+# Dependencies
+# ============================================
 node_modules/
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
+# ============================================
 # Expo
+# ============================================
 .expo/
+.expo-shared/
 dist/
 web-build/
 expo-env.d.ts
 
-# Native
-.kotlin/
+# ============================================
+# Native Build Files
+# ============================================
 *.orig.*
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
+*.keystore
+.kotlin/
+android/
+ios/
 
-# Metro
+# ============================================
+# Metro Bundler
+# ============================================
 .metro-health-check*
+.metro-cache/
 
-# debug
+# ============================================
+# Environment Variables
+# ============================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+*.env
+!.env.example
+
+# ============================================
+# Logs
+# ============================================
+logs/
+*.log
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+lerna-debug.log*
+.pnpm-debug.log*
 
-# macOS
+# ============================================
+# Testing & Coverage
+# ============================================
+coverage/
+.nyc_output/
+test-results/
+junit.xml
+
+# ============================================
+# TypeScript
+# ============================================
+*.tsbuildinfo
+*.d.ts.map
+
+# ============================================
+# Build Output
+# ============================================
+build/
+out/
+.next/
+.cache/
+
+# ============================================
+# IDE & Editors
+# ============================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.history/
+*.sublime-project
+*.sublime-workspace
+
+# ============================================
+# OS Files
+# ============================================
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+Desktop.ini
 *.pem
 
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-app-example
+# ============================================
+# Misc
+# ============================================
+.eslintcache
+.stylelintcache
+app-example/
+temp/
+tmp/
