--- a/backend/package.json
+++ b/backend/package.json
@@ -38,8 +38,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
-    "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.2"
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
